[gd_scene load_steps=5 format=3 uid="uid://k6nbvsvw7dnw"]

[ext_resource type="Texture2D" uid="uid://b2qmmdp7vvmq8" path="res://pictures/arkaplan.png" id="1_6dakt"]
[ext_resource type="Script" path="res://scripts/Login.gd" id="1_yavfn"]
[ext_resource type="Texture2D" uid="uid://dey5orvsngpbc" path="res://pictures/indir.jpeg" id="2_sg474"]
[ext_resource type="LabelSettings" uid="uid://gnsrht7wdimk" path="res://autoload/new_label_settings.tres" id="3_35mme"]

[node name="Node" type="Node"]

[node name="Login" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_yavfn")

[node name="NinePatchRect" type="NinePatchRect" parent="Login"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 722.0
offset_bottom = 1282.0
texture = ExtResource("1_6dakt")

[node name="NinePatchRect2" type="NinePatchRect" parent="Login"]
layout_mode = 0
offset_top = 177.0
offset_right = 723.0
offset_bottom = 861.0
texture = ExtResource("2_sg474")

[node name="game_name_label" type="Label" parent="Login/NinePatchRect2"]
layout_mode = 0
offset_left = 196.0
offset_top = 58.0
offset_right = 510.0
offset_bottom = 118.0
text = "Oyun İsmi / Logo"
label_settings = ExtResource("3_35mme")

[node name="username_label" type="Label" parent="Login/NinePatchRect2"]
layout_mode = 0
offset_left = 45.0
offset_top = 149.0
offset_right = 238.0
offset_bottom = 209.0
text = "Username"
label_settings = ExtResource("3_35mme")

[node name="username_edit" type="LineEdit" parent="Login/NinePatchRect2"]
layout_mode = 0
offset_left = 44.0
offset_top = 220.0
offset_right = 689.0
offset_bottom = 302.0
caret_blink_interval = 9.05

[node name="password_label" type="Label" parent="Login/NinePatchRect2"]
layout_mode = 0
offset_left = 45.0
offset_top = 289.0
offset_right = 235.0
offset_bottom = 349.0
text = "Password"
label_settings = ExtResource("3_35mme")

[node name="password_edit" type="LineEdit" parent="Login/NinePatchRect2"]
layout_mode = 0
offset_left = 47.0
offset_top = 351.0
offset_right = 684.0
offset_bottom = 448.0
clear_button_enabled = true
secret = true
secret_character = "*"

[node name="login_button" type="Button" parent="Login/NinePatchRect2"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.106
offset_left = 238.0
offset_top = 479.0
offset_right = 436.0
offset_bottom = 496.132
text = "Giriş Yap"

[node name="register_switch" type="CheckButton" parent="Login/NinePatchRect2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.009
offset_left = 457.0
offset_top = 489.0
offset_right = 555.587
offset_bottom = 538.844
text = "REGİSTER"

[node name="exit_button" type="Button" parent="Login/NinePatchRect2"]
layout_mode = 0
offset_left = -3.0
offset_top = 618.0
offset_right = 115.0
offset_bottom = 683.0
text = "Quit"

[connection signal="pressed" from="Login/NinePatchRect2/login_button" to="Login" method="_on_button_pressed"]
[connection signal="pressed" from="Login/NinePatchRect2/exit_button" to="Login" method="_on_exit_button_pressed"]
